$Id$

You are looking at a CVS snapshot of the REL_1_2 branch.

Version 1.2-b1 (?? ??? 2007)
 - Fix bug [ 1851371 ] Notification not sent on description change
 - Fix bug [ 1839882 ] help/guide pages blocked (non auth)
 - Fix bug [ 1851209 ] advanced search doesn't show on public calendar
 - Fix bug [ 1814525 ] Repeating event deletion
 - Apply PATCH [ 1802793 ] iCS export - LDAP - Empty Attendee's info
 - Security fix 1826571: misc XSS issues
 - Fix bug [ 1881030 ] date-format wrong in month.php
 - Modified iCalendar output to correct ATTENDEE output to conform to
   RFC2445; fixed attendee to user login if no fullname info available.
 - Modified iCalendar output to avoid bug in Sunbird 0.7.
 - Fix bug [ 1851220 ] cannot enter multiple categories.. only first one is kept
 - Added new rss_unapproved.php that will generate RSS 2.0 listing
   of unapproved events.
 - Apply PATCH [ 1878014 ] Fix selectDate() JavaScript function
 - Security fix: Better cleansing of search.php 'adv' parameter
 - Security fix: do not allow certain HTML tags in event descriptions
   such as SCRIPT, META, LINK, OBJECT, APPLET and others.
 - Fixes to icalclient.php: include translate.php sooner
 - Apply PATCH [ 1836703 ] a few corrections to Italian.txt
 - Apply PATCH [ 1834400 ] some corrections to Italian.txt
 - Apply PATCH [ 1834285 ] All remaning items for Italian.txt
 - Fix bug [ 1649974 ] 'public access' impossible cause using previous logged
 - Add support for Czech UTF8
 - Change $includedir and $basedir to CONSTANTS
 - Fix bug [ 1797030 ] Error in send_reminder.php
 - Fix bug [ 1737128 ] From notification to "not authorized"
 - Fix bug [ 1823063 ] CVS 1.1.7 - month /week view - no today color right of event
 - Fix bug [ 1829125 ] I can not add external calendars
 - Implemented RFE [ 1829482 ] Display Error Codes, to aid in troubleshooting other bug reports
 - Fix bug [ 1829224 ] getPostVal fails on non-array