@@ -3,6 +3,7 @@ $Id$
 You are looking at a CVS snapshot of the REL_1_2 branch.
 
 Version 1.2-b1 (?? ??? 2007)
+ - Fix bug: single quote in nonuser name causes JS error
  - Fix bug [ 1851371 ] Notification not sent on description change
  - Fix bug [ 1839882 ] help/guide pages blocked (non auth)
  - Fix bug [ 1851209 ] advanced search doesn't show on public calendar
